@@ -16,7 +16,7 @@
 # limitations under the License.
 #
 
-# Remember visor tester command line parameters
+# Remember command line parameters
 ARGS=$@
 
 #
@@ -53,7 +53,7 @@ setIgniteHome
 # Set IGNITE_LIBS.
 #
 . "${SCRIPTS_HOME}"/include/setenv.sh
-. "${SCRIPTS_HOME}"/include/target-classpath.sh # Will be removed in release.
+. "${SCRIPTS_HOME}"/include/build-classpath.sh # Will be removed in the binary release.
 CP="${IGNITE_HOME}/bin/include/visor-common/*${SEP}${IGNITE_HOME}/bin/include/visorcmd/*${SEP}${IGNITE_LIBS}"
 
 #
@@ -104,6 +104,18 @@ function restoreSttySettings() {
 # Trap that restores terminal in case script execution is interrupted.
 #
 trap restoreSttySettings INT
+
+#
+# Final JVM_OPTS for Java 9 compatibility
+#
+${JAVA_HOME}/bin/java -version 2>&1 | grep -qE 'java version "9.*"' && {
+JVM_OPTS="--add-exports java.base/jdk.internal.misc=ALL-UNNAMED \
+          --add-exports java.base/sun.nio.ch=ALL-UNNAMED \
+          --add-exports java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
+          --add-exports jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
+          --add-modules java.xml.bind \
+      ${JVM_OPTS}"
+} || true
 
 #
 # Start Visor console.
